myBouquet working on index
I've got the game to work for a fixed bouquet. You can toggle flowers and then the submit button runs the bouquet checker.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <button onclick="toggleFlower('Lilies')">Lilies</button>
         <button onclick="toggleFlower('Carnations')">Carnations</button>
     </div>
-    <button id="submit-button" onclick="popUp()">SUBMIT</button>
+    <button id="submit-button" onclick="checkBouquet()">SUBMIT</button>
     <h2>Your Bouquet:</h2>
     <ul id="bouquet-list"></ul>
 </body>
